[package]
name = "domain-rustvalidator"
version = "0.1.0"
authors = ["Dani <dani.pous@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.23.1"
clap = "2.33.0"
chrono = "0.4.10"
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.2"
trust-dns-resolver = "0.19.5"
trust-dns-proto = "0.19.5"
tokio = { version = "0.2.20", features = ["full"] }
futures = "0.3.1"
futures-util = "0.3.1"
num_cpus = "*"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
